tests/bad/break.tig
let var N := 8 in
    (for i := 0 to N - 1 do 
        print("\n")
    ); break
end
